# memikrr

./: CMakeLists.txt  main.cpp  readme.md
data/: Model_Scaled_LQL.osim  Setup_Analyze.xml  wristPoseInput.txt  x_arm_musculoskeletal_lql.urdf  x_arm_musculoskeletal_simplified_joints_aligned_lql_noJointOffset.urdf
doc/: opensim_core_cpp_code_section.txt
inc/: armSwivelOptimization.h
include/: armSwivelOptimization.h  hybridIK.h  muscleEffortEstimation.h  urdfModel.h
src/: armSwivelOptimization.cpp  hybridIK.cpp  muscleEffortEstimation.cpp  urdfModel.cpp
test/: Setup_Analyze.xml  coordinates.mot  feasibleHumanArmIKForWristPose.txt
